--- a/style/board/mainBoard.css
+++ b/style/board/mainBoard.css
@@ -177,6 +177,7 @@
   align-items: flex-start;
   justify-content: space-between;
   gap: 10px;
+  margin-bottom: 8px;
 }
 
 .boardTasksBigger {
